crud produtos e query cabulosa de vendas